--- a/Photo Slider/site.html
+++ b/Photo Slider/site.html
@@ -4,12 +4,101 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Book Form</title>
+    <title>Photo Slider</title>
     <link rel="stylesheet" href="CSS/bootstrap.min.css" />
     <link rel="stylesheet" href="CSS/all.min.css" />
     <link rel="stylesheet" href="CSS/styles.css" />
   </head>
   <body>
+    <div class="container">
+      <h1 class="text-center my-5">Accessories</h1>
+      <div class="row g-3">
+        <div class="col-md-4">
+          <div class="imgBox position-relative">
+            <img src="img/images (4).jpeg" alt="" />
+            <div class="desc bg-light text-center p-2">
+              <h3>Title</h3>
+              <h6>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Sapiente, doloremque!
+              </h6>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="imgBox position-relative">
+            <img src="img/images.jpeg" alt="" />
+            <div class="desc bg-light text-center p-2">
+              <h3>Title</h3>
+              <h6>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Sapiente, doloremque!
+              </h6>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="imgBox position-relative">
+            <img src="img/images (1).jpeg" alt="" />
+            <div class="desc bg-light text-center p-2">
+              <h3>Title</h3>
+              <h6>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Sapiente, doloremque!
+              </h6>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="imgBox position-relative">
+            <img src="img/images (2).jpeg" alt="" />
+            <div class="desc bg-light text-center p-2">
+              <h3>Title</h3>
+              <h6>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Sapiente, doloremque!
+              </h6>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="imgBox position-relative">
+            <img src="img/images (3).jpeg" alt="" />
+            <div class="desc bg-light text-center p-2">
+              <h3>Title</h3>
+              <h6>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Sapiente, doloremque!
+              </h6>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="imgBox position-relative">
+            <img src="img/images (5).jpeg" alt="" />
+            <div class="desc bg-light text-center p-2">
+              <h3>Title</h3>
+              <h6>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Sapiente, doloremque!
+              </h6>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="imgBox position-relative">
+            <img src="img/images (7).jpeg" alt="" />
+            <div class="desc bg-light text-center p-2">
+              <h3>Title</h3>
+              <h6>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Sapiente, doloremque!
+              </h6>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <script src="js/script.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
   </body>
