--- a/Photo Slider/site.html
+++ b/Photo Slider/site.html
@@ -11,6 +11,16 @@
   </head>
   <body>
     <div class="container">
+      <div class="layOut d-flex">
+        <div class="imgLay">
+          <img src="img/images (6).jpeg" alt="" />
+          <div class="icons bg-danger ">
+            <i class="fa-solid fa-circle-arrow-left"></i>
+            <i class="fa-regular fa-circle-xmark"></i>
+            <i class="fa-solid fa-circle-arrow-right"></i>
+          </div>
+        </div>
+      </div>
       <h1 class="text-center my-5">Accessories</h1>
       <div class="row g-3">
         <div class="col-md-4">
