Layout & fix issues

--- a/Photo Slider/site.html
+++ b/Photo Slider/site.html
@@ -11,22 +11,22 @@
   </head>
   <body>
     <div class="container">
-      <div class="layOut d-flex">
+      <div class="layOut d-none">
         <div class="imgLay">
-          <img src="img/images (6).jpeg" alt="" />
-          <div class="icons bg-danger ">
+          <img src="img/images (6).jpeg" alt=""  />
+          <div class="icons">
             <i class="fa-solid fa-circle-arrow-left"></i>
-            <i class="fa-regular fa-circle-xmark"></i>
+            <i class="fa-regular fa-circle-xmark iconX"></i>
             <i class="fa-solid fa-circle-arrow-right"></i>
           </div>
         </div>
       </div>
       <h1 class="text-center my-5">Accessories</h1>
       <div class="row g-3">
-        <div class="col-md-4">
-          <div class="imgBox position-relative">
-            <img src="img/images (4).jpeg" alt="" />
-            <div class="desc bg-light text-center p-2">
+        <div class="col-md-4 col-sm-6">
+          <div class="imgBox">
+            <img src="img/images (4).jpeg" alt=""  />
+            <div class="desc">
               <h3>Title</h3>
               <h6>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -35,10 +35,10 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="imgBox position-relative">
-            <img src="img/images.jpeg" alt="" />
-            <div class="desc bg-light text-center p-2">
+        <div class="col-md-4 col-sm-6">
+          <div class="imgBox">
+            <img src="img/images.jpeg" alt=""  />
+            <div class="desc">
               <h3>Title</h3>
               <h6>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -47,10 +47,10 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="imgBox position-relative">
-            <img src="img/images (1).jpeg" alt="" />
-            <div class="desc bg-light text-center p-2">
+        <div class="col-md-4 col-sm-6">
+          <div class="imgBox">
+            <img src="img/images (1).jpeg" alt=""  />
+            <div class="desc">
               <h3>Title</h3>
               <h6>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -59,10 +59,10 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="imgBox position-relative">
-            <img src="img/images (2).jpeg" alt="" />
-            <div class="desc bg-light text-center p-2">
+        <div class="col-md-4 col-sm-6">
+          <div class="imgBox">
+            <img src="img/images (2).jpeg" alt=""  />
+            <div class="desc">
               <h3>Title</h3>
               <h6>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -71,10 +71,10 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="imgBox position-relative">
-            <img src="img/images (3).jpeg" alt="" />
-            <div class="desc bg-light text-center p-2">
+        <div class="col-md-4 col-sm-6">
+          <div class="imgBox">
+            <img src="img/images (3).jpeg" alt=""  />
+            <div class="desc">
               <h3>Title</h3>
               <h6>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -83,10 +83,10 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="imgBox position-relative">
-            <img src="img/images (5).jpeg" alt="" />
-            <div class="desc bg-light text-center p-2">
+        <div class="col-md-4 col-sm-6">
+          <div class="imgBox">
+            <img src="img/images (5).jpeg" alt=""  />
+            <div class="desc">
               <h3>Title</h3>
               <h6>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -95,10 +95,10 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="imgBox position-relative">
-            <img src="img/images (7).jpeg" alt="" />
-            <div class="desc bg-light text-center p-2">
+        <div class="col-md-4 col-sm-6">
+          <div class="imgBox">
+            <img src="img/images (7).jpeg" alt=""  />
+            <div class="desc">
               <h3>Title</h3>
               <h6>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
