--- a/Photo Slider/site.html
+++ b/Photo Slider/site.html
@@ -13,11 +13,11 @@
     <div class="container">
       <div class="layOut d-none">
         <div class="imgLay">
-          <img src="img/images (6).jpeg" alt=""  />
+          <img src="" alt=""  />
           <div class="icons">
-            <i class="fa-solid fa-circle-arrow-left"></i>
+            <i class="fa-solid fa-circle-arrow-left iconL"></i>
             <i class="fa-regular fa-circle-xmark iconX"></i>
-            <i class="fa-solid fa-circle-arrow-right"></i>
+            <i class="fa-solid fa-circle-arrow-right iconR"></i>
           </div>
         </div>
       </div>
