--- a/Form Data/site.html
+++ b/Form Data/site.html
@@ -10,18 +10,42 @@
     <link rel="stylesheet" href="CSS/styles.css" />
   </head>
   <body>
-    <div class="formContainer py-5">
+    <div class="formContainer py-3">
       <div class="container">
-        <h1 class="text-center py-4">Book Data</h1>
+        <h1 class="text-center py-3">Book Data</h1>
         <div class="content">
           <label for="BookNa">Book Name: </label>
-          <input class="form-control mb-3 is-valid" type="text" id="BookNa" oninput="regx(this.value);" />
+          <input
+            class="form-control mb-3 is-valid"
+            type="text"
+            id="BookNa"
+            oninput="regx(this.value);"
+            placeholder="Enter the Title"
+          />
           <label for="BookPr">Book Price: </label>
-          <input class="form-control mb-3 is-valid" type="number" id="BookPr" oninput="regx(this.value);"/>
+          <input
+            class="form-control mb-3 is-valid"
+            type="number"
+            id="BookPr"
+            oninput="regx(this.value);"
+            placeholder="Enter the Price"
+          />
           <label for="BookCat">Book Category: </label>
-          <input class="form-control mb-3 is-valid" type="text" id="BookCat" oninput="regx(this.value);" />
+          <input
+            class="form-control mb-3 is-valid"
+            type="text"
+            id="BookCat"
+            oninput="regx(this.value);"
+            placeholder="Enter the Category"
+          />
           <label for="BookDesc">Book Description: </label>
-          <input class="form-control mb-3 is-valid" type="text" id="BookDesc" oninput="regx(this.value);" />
+          <input
+            class="form-control mb-3 is-valid"
+            type="text"
+            id="BookDesc"
+            oninput="regx(this.value);"
+            placeholder="Enter the Description"
+          />
           <div class="d-flex justify-content-center gap-4 mt-5">
             <button
               class="btn btn-light"
@@ -30,7 +54,7 @@
             >
               Add book
             </button>
-            <button class="btn btn-light" onclick="clearInputs();">
+            <button class="btn btn-light reset" onclick="clearInputs();">
               Reset
             </button>
           </div>
@@ -41,11 +65,11 @@
             type="text"
             id="search"
             placeholder="Search"
-            oninput="search(this.value);"
+            oninput="search(this.value)"
           />
         </div>
-        <div class="tableData py-5">
-          <table class="table table-striped text-center ">
+        <div class="tableData py-2">
+          <table class="table table-striped text-center">
             <thead>
               <tr>
                 <th>ID</th>
